[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Level Maker.gd" type="Script" id=1]
[ext_resource path="res://Assets/Godot Resources/Terrian.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Images/Blocks_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Godot Resources/button.tres" type="DynamicFont" id=4]

[sub_resource type="TileSet" id=1]
0/name = "Blocks_01.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Blocks_01.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Level Maker" type="Node2D"]
script = ExtResource( 1 )

[node name="Terrian" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0 )

[node name="Pressure Plates" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Options" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -92.0
margin_right = 222.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="UI/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.45098, 0.521569, 0.909804, 0.792157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/Options/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stone" type="ColorRect" parent="UI/Options/Panel/HBox"]
margin_right = 84.0
margin_bottom = 84.0
size_flags_horizontal = 3
color = Color( 0.909804, 0.623529, 0.623529, 1 )

[node name="Sprite" type="Sprite" parent="UI/Options/Panel/HBox/Stone"]
position = Vector2( 10, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Wood" type="ColorRect" parent="UI/Options/Panel/HBox"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 84.0
size_flags_horizontal = 3
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Sprite" type="Sprite" parent="UI/Options/Panel/HBox/Wood"]
position = Vector2( 10, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Copper" type="ColorRect" parent="UI/Options/Panel/HBox"]
margin_left = 176.0
margin_right = 260.0
margin_bottom = 84.0
size_flags_horizontal = 3
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Sprite" type="Sprite" parent="UI/Options/Panel/HBox/Copper"]
position = Vector2( 10, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )

[node name="Dirt" type="ColorRect" parent="UI/Options/Panel/HBox"]
margin_left = 264.0
margin_right = 348.0
margin_bottom = 84.0
size_flags_horizontal = 3
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Sprite" type="Sprite" parent="UI/Options/Panel/HBox/Dirt"]
position = Vector2( 10, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 32, 32, 32 )

[node name="Hole" type="ColorRect" parent="UI/Options/Panel/HBox"]
margin_left = 352.0
margin_right = 436.0
margin_bottom = 84.0
size_flags_horizontal = 3
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Sprite" type="Sprite" parent="UI/Options/Panel/HBox/Hole"]
position = Vector2( 10, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 32, 32, 32 )

[node name="Menu" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 37.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/Menu/HBox"]
margin_right = 96.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "B a c k"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/Menu/HBox"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "L o a d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempSave" type="Button" parent="UI/Menu/HBox"]
margin_left = 200.0
margin_right = 320.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Temp save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/Menu/HBox"]
margin_left = 324.0
margin_right = 421.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S a v e"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 425.0
margin_right = 521.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "level name"

[node name="Stone" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 525.0
margin_right = 622.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "stone"

[node name="Wood" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 626.0
margin_right = 722.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "wood"

[node name="Copper" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 726.0
margin_right = 823.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "copper"

[node name="Dirt" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 827.0
margin_right = 923.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "dirt"

[node name="Coins" type="LineEdit" parent="UI/Menu/HBox"]
margin_left = 927.0
margin_right = 1024.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 11
placeholder_text = "coins"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 288 )
current = true
zoom = Vector2( 0.6, 0.6 )

[connection signal="pressed" from="UI/Menu/HBox/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Menu/HBox/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="UI/Menu/HBox/TempSave" to="." method="_on_TempSave_pressed"]
[connection signal="pressed" from="UI/Menu/HBox/Save" to="." method="_on_Save_pressed"]
